# copied from https://github.com/LeelaChessZero/lc0/blob/6df87ad33ab2ebe12abb70ddbd7dde9c4ea242c6/pyproject.toml

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "lczero_bindings"
version = "0.1.0"
description = "Leela Chess Zero Python bindings"
authors = [{ name = "The LCZero Authors" }]
license = {file = "COPYING"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU"
]

[project.urls]
homepage = "https://github.com/LeelaChessZero/lc0"
