[metadata]
license_files = 
	apache-2.0.LICENSE
	NOTICE
	AUTHORS.rst
	CHANGELOG.rst
	commoncode.ABOUT
	README.rst
name = commoncode
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0
description = Set of common utilities, originally split from ScanCode
long_description = file:README.rst
url = https://github.com/nexB/commoncode
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development
	Topic :: Utilities
keywords = 
	utilities
	scancode-toolkit

[options]
package_dir = 
	=src
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
	attrs >= 18.1, !=20.1.0
	click >= 6.0.0
	text_unidecode >= 1.0
	Beautifulsoup4 >= 4.0.0, < 5.0.0
	requests >= 2.7.0, < 3.0.0
	intbitset >= 2.3.0, < 3.0
	saneyaml
	typing >=3.6, < 3.7; python_version < "3.7"
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where = src

[options.extras_require]
testing = 
	pytest >= 6
	pytest-xdist >= 2
docs = 
	Sphinx>=3.3.1
	sphinx-rtd-theme>=0.5.0
	doc8>=0.8.1

[egg_info]
tag_build = 
tag_date = 0

